# dotfiles-waybar

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  Taskfile.yml  config  config.backup-1763070226  deploy.sh  style.css  waybar-applet
config-src/: base.json  modules.json
config-src/modules/: extended.json  system.json
rust-modules/: Cargo.toml
rust-modules/app-volume-mixer/: Cargo.toml
rust-modules/app-volume-mixer/src/: main.rs
rust-modules/audio-viz/: Cargo.toml
rust-modules/audio-viz/src/: main.rs
rust-modules/bluetooth-mgr/: Cargo.toml
rust-modules/bluetooth-mgr/src/: main.rs
rust-modules/clipboard-mgr/: Cargo.toml
rust-modules/clipboard-mgr/src/: main.rs
rust-modules/common/: Cargo.toml
rust-modules/common/src/: cache.rs  error.rs  fallback.rs  lib.rs  logging.rs  output.rs  retry.rs
rust-modules/disk-monitor/: Cargo.toml
rust-modules/disk-monitor/src/: main.rs
rust-modules/gpu-monitor/: Cargo.toml
rust-modules/gpu-monitor/src/: main.rs
rust-modules/mpris-control/: Cargo.toml
rust-modules/mpris-control/src/: main.rs
rust-modules/net-quality/: Cargo.toml
rust-modules/net-quality/src/: main.rs
rust-modules/netspeed/: Cargo.toml
rust-modules/netspeed/src/: main.rs
rust-modules/power-manager/: Cargo.toml
rust-modules/power-manager/src/: main.rs
rust-modules/privacy-monitor/: Cargo.toml
rust-modules/privacy-monitor/src/: main.rs
rust-modules/process-monitor/: Cargo.toml
rust-modules/process-monitor/src/: main.rs
rust-modules/sys-monitor/: Cargo.toml
rust-modules/sys-monitor/src/: main.rs
rust-modules/theme-switcher/: Cargo.toml
rust-modules/theme-switcher/src/: main.rs
rust-modules/thermal-monitor/: Cargo.toml
rust-modules/thermal-monitor/src/: main.rs
rust-modules/updates-monitor/: Cargo.toml
rust-modules/updates-monitor/src/: main.rs
rust-modules/vpn-manager/: Cargo.toml
rust-modules/vpn-manager/src/: main.rs
rust-modules/waybar-daemon/: Cargo.toml
rust-modules/weather-fetch/: Cargo.toml
rust-modules/weather-fetch/src/: main.rs
scripts/: audio-viz-continuous.sh  audio-viz-mode.sh  audio-viz-wrapper.sh  brightness-wrapper.sh  gpu.sh  hardware-wrapper.sh  merge-configs.sh  mpris-action.sh  netspeed.sh  network-wrapper.sh  smart-clipboard.sh  strip-ansi.sh  system-wrapper.sh  theme-switcher.sh  wallpaper-manager.sh  watch-mode.sh  weather.sh  workspace-info.sh
styles/: main.css
themes/: active.css  ayu-dark.css  catppuccin-mocha.css  gruvbox-dark.css  tokyo-night.css
