[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
cached.workspace = true

# Logging
systemd-journal-logger = "2.1"

# File system
dirs = "5.0"
notify-rust = "4.10"

[lib]
name = "waybar_common"
path = "src/lib.rs"
