[package]
name = "process-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }

[[bin]]
name = "process-monitor"
path = "src/main.rs"
